// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IndividualCard Lock individual on click 1`] = `
<div
  class="mx-auto v-card v-card--link v-card--raised v-sheet theme--light"
  tabindex="0"
>
  <div
    class="grow v-list-item theme--light"
    tabindex="-1"
  >
    <div
      class="v-avatar v-list-item__avatar grey"
      style="height: 40px; min-width: 40px; width: 40px;"
    >
      
      T
    
    </div>
     
    <div
      class="v-list-item__content"
    >
      <div
        class="v-list-item__title"
      >
        Test
      </div>
       
      <div
        class="v-list-item__subtitle"
      />
    </div>
     
    <div
      class="v-list-item__action"
    >
      <span
        class="v-list-item__action-text"
      >
        <!---->
         
        <button
          class="v-btn v-btn--flat v-btn--icon v-btn--round v-btn--text theme--light v-size--default"
          type="button"
        >
          <span
            class="v-btn__content"
          >
            <i
              aria-hidden="true"
              class="v-icon notranslate mdi mdi-lock theme--light"
              style="font-size: 16px;"
            />
          </span>
        </button>
      </span>
    </div>
  </div>
    
  <!---->
</div>
`;

exports[`IndividualCard Mock query for lockIndividual 1`] = `
<v-card-stub
  class="mx-auto"
  loaderheight="4"
  raised="true"
  tag="div"
>
  <v-list-item-stub
    activeclass=""
    class="grow"
    tag="div"
  >
    <v-list-item-avatar-stub
      color="grey"
      size="40"
    >
      
      T
    
    </v-list-item-avatar-stub>
     
    <v-list-item-content-stub>
      <v-list-item-title-stub>
        Test
      </v-list-item-title-stub>
       
      <v-list-item-subtitle-stub />
    </v-list-item-content-stub>
     
    <v-list-item-action-stub>
      <v-list-item-action-text-stub>
        <!---->
         
        <v-btn-stub
          activeclass=""
          icon="true"
          tag="button"
          text="true"
          type="button"
        >
          <v-icon-stub
            small=""
          >
            
            mdi-lock-open-outline
          
          </v-icon-stub>
        </v-btn-stub>
      </v-list-item-action-text-stub>
    </v-list-item-action-stub>
  </v-list-item-stub>
    
  <v-snackbar-stub
    color="error"
    timeout="6000"
  >
    
    Error
  
  </v-snackbar-stub>
</v-card-stub>
`;

exports[`IndividualCard Mock query for unlockIndividual 1`] = `
<v-card-stub
  class="mx-auto"
  loaderheight="4"
  raised="true"
  tag="div"
>
  <v-list-item-stub
    activeclass=""
    class="grow"
    tag="div"
  >
    <v-list-item-avatar-stub
      color="grey"
      size="40"
    >
      
      T
    
    </v-list-item-avatar-stub>
     
    <v-list-item-content-stub>
      <v-list-item-title-stub>
        Test
      </v-list-item-title-stub>
       
      <v-list-item-subtitle-stub />
    </v-list-item-content-stub>
     
    <v-list-item-action-stub>
      <v-list-item-action-text-stub>
        <!---->
         
        <v-btn-stub
          activeclass=""
          icon="true"
          tag="button"
          text="true"
          type="button"
        >
          <v-icon-stub
            small=""
          >
            
            mdi-lock
          
          </v-icon-stub>
        </v-btn-stub>
      </v-list-item-action-text-stub>
    </v-list-item-action-stub>
  </v-list-item-stub>
    
  <v-snackbar-stub
    color="error"
    timeout="6000"
  >
    
    Error
  
  </v-snackbar-stub>
</v-card-stub>
`;

exports[`IndividualCard Show snackbar on error 1`] = `
<div
  class="mx-auto v-card v-card--link v-card--raised v-sheet theme--light"
  tabindex="0"
>
  <div
    class="grow v-list-item theme--light"
    tabindex="-1"
  >
    <div
      class="v-avatar v-list-item__avatar grey"
      style="height: 40px; min-width: 40px; width: 40px;"
    >
      
      T
    
    </div>
     
    <div
      class="v-list-item__content"
    >
      <div
        class="v-list-item__title"
      >
        Test
      </div>
       
      <div
        class="v-list-item__subtitle"
      />
    </div>
     
    <div
      class="v-list-item__action"
    >
      <span
        class="v-list-item__action-text"
      >
        <!---->
         
        <button
          class="v-btn v-btn--flat v-btn--icon v-btn--round v-btn--text theme--light v-size--default"
          type="button"
        >
          <span
            class="v-btn__content"
          >
            <i
              aria-hidden="true"
              class="v-icon notranslate mdi mdi-lock theme--light"
              style="font-size: 16px;"
            />
          </span>
        </button>
      </span>
    </div>
  </div>
    
  <div
    class="v-snack v-snack--active v-snack--bottom v-snack-transition-enter v-snack-transition-enter-active"
  >
    <div
      class="v-snack__wrapper error"
      role="alert"
    >
      <div
        class="v-snack__content"
      >
        
    abc not found in the registry
  
      </div>
    </div>
  </div>
</div>
`;

exports[`IndividualCard Unlock individual on click 1`] = `
<div
  class="mx-auto v-card v-card--link v-card--raised v-sheet theme--light"
  tabindex="0"
>
  <div
    class="grow v-list-item theme--light"
    tabindex="-1"
  >
    <div
      class="v-avatar v-list-item__avatar grey"
      style="height: 40px; min-width: 40px; width: 40px;"
    >
      
      T
    
    </div>
     
    <div
      class="v-list-item__content"
    >
      <div
        class="v-list-item__title"
      >
        Test
      </div>
       
      <div
        class="v-list-item__subtitle"
      />
    </div>
     
    <div
      class="v-list-item__action"
    >
      <span
        class="v-list-item__action-text"
      >
        <!---->
         
        <button
          class="v-btn v-btn--flat v-btn--icon v-btn--round v-btn--text theme--light v-size--default"
          type="button"
        >
          <span
            class="v-btn__content"
          >
            <i
              aria-hidden="true"
              class="v-icon notranslate mdi mdi-lock-open-outline theme--light"
              style="font-size: 16px;"
            />
          </span>
        </button>
      </span>
    </div>
  </div>
    
  <!---->
</div>
`;
